<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/move_up"
        android:title="@string/manage_accounts_move_up_action" />
    <item android:id="@+id/move_down"
        android:title="@string/manage_accounts_move_down_action" />
    <item android:id="@+id/empty_trash"
        android:title="@string/empty_trash_action" />
    <item android:id="@+id/account_settings"
        android:visible="false"
        android:title="@string/account_settings_action" />
    <item android:id="@+id/delete_account"
        android:visible="false"
        android:title="@string/remove_account_action" />
    <item android:id="@+id/clear"
        android:visible="false"
        android:title="@string/clear_action" />
    <item android:id="@+id/recreate"
        android:visible="false"
        android:title="@string/recreate_action" />
    <item android:id="@+id/clear_pending"
        android:visible="false"
        android:title="@string/clear_pending_action" />
    <item android:id="@+id/export"
        android:visible="false"
        android:title="@string/settings_export_account" />
</menu>
